modules/base/aws_network_acl.tf
resource "aws_network_acl" "public" {
  vpc_id = aws_vpc.main.id

  ingress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  subnet_ids = values(aws_subnet.public)[*].id

  tags = merge(
    var.aws_resource_tags,
    { Name = "${title(var.project)}Public" }
  )
}

resource "aws_network_acl" "private_was" {
  vpc_id = aws_vpc.main.id

  ingress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  subnet_ids = values(aws_subnet.private_was)[*].id

  tags = merge(
    var.aws_resource_tags,
    { Name = "${title(var.project)}PrivateWAS" }
  )
}

resource "aws_network_acl" "private_db" {
  vpc_id = aws_vpc.main.id

  ingress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  subnet_ids = values(aws_subnet.private_db)[*].id

  tags = merge(
    var.aws_resource_tags,
    { Name = "${title(var.project)}PrivateDB" }
  )
}
